# talk_to_your_data

./: .env.example  CLAUDE.md  Dockerfile  PROJECT_CONTEXT.md  README.md  pyproject.toml  render.yaml  system_design_mvp.excalidraw
data/: results_beam_nb0_metadata.txt
datasets/marts/user-activity-metrics/: schema.yaml
datasets/marts/user-revenue-summary/: schema.yaml
datasets/public/payments/: schema.yaml
datasets/public/sessions/: schema.yaml
datasets/public/subscriptions/: schema.yaml
datasets/public/users/: schema.yaml
scripts/: beam_nb0_metadata.sql
talk_to_your_data/: engine.py  intake.py  main.py  schema_config.yaml  semantic_layer.py  slack_bot.py
tests/: test_db_connection.py
